--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="Answer8b">Diomedes</string>
     <string name="Answer8c">Daedalus</string>
     <string name="Answer8d">Perseus</string>
+    <string name="SubmitButton">Submit</string>
 </resources>
